--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'org.spongepowered.mixin'
 
 
 group = mod_group_id
-version = mod_version
+version = minecraft_version + '_' + mod_version
 
 base {
     archivesName = mod_id
