--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,7 +1,12 @@
-public net.minecraft.world.damagesource.DamageSources m_269298_(Lnet/minecraft/resources/ResourceKey;Lnet/minecraft/world/entity/Entity;)Lnet/minecraft/world/damagesource/DamageSource; # source
-public net.minecraft.world.damagesource.DamageSources m_269079_(Lnet/minecraft/resources/ResourceKey;)Lnet/minecraft/world/damagesource/DamageSource; # source
-public net.minecraft.client.gui.screens.inventory.AbstractContainerScreen f_97735_ # leftPos
-public net.minecraft.client.gui.screens.inventory.AbstractContainerScreen f_97726_ # imageWidth
-public net.minecraft.client.gui.screens.Screen m_169383_(Lcom/mojang/blaze3d/vertex/PoseStack;Ljava/util/List;II)V # renderTooltipInternal
-public net.minecraft.client.particle.CritParticle <init>(Lnet/minecraft/client/multiplayer/ClientLevel;DDDDDD)V # <init>
-public net.minecraft.world.entity.projectile.AbstractArrow f_36701_ # piercingIgnoreEntityIds
+public net.minecraft.client.particle.CritParticle <init>(Lnet.minecraft.client.world.ClientWorld;DDDDDD)V # <init>
+#public net.minecraft.world.entity.projectile.AbstractArrow f_36701_ # piercingIgnoreEntityIds
+
+public net.minecraft.client.gui.screen.Screen field_230705_e_ # children
+public net.minecraft.client.gui.screen.inventory.ContainerScreen field_147003_i # guiLeft
+public net.minecraft.entity.ai.attributes.RangedAttribute field_111120_a # minimumValue
+public net.minecraft.entity.ai.attributes.RangedAttribute field_111118_b # maximumValue
+public net.minecraft.entity.projectile.AbstractArrowEntity field_213878_az # piercedEntities
+
+public net.minecraft.entity.ai.attributes.AttributeModifierMap field_233802_a_ # attributeMap
+public net.minecraft.client.gui.recipebook.RecipeBookGui field_201522_g # field_201522_g
+public net.minecraft.util.text.TextFormatting field_96329_z # formattingCode
