[fix] fix atf CritParticle init can't invoke problem

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,5 +1,4 @@
-public net.minecraft.client.particle.CritParticle <init>(Lnet.minecraft.client.world.ClientWorld;DDDDDD)V # <init>
-#public net.minecraft.world.entity.projectile.AbstractArrow f_36701_ # piercingIgnoreEntityIds
+public net.minecraft.client.particle.CritParticle <init>(Lnet/minecraft/client/world/ClientWorld;DDDDDD)V
 
 public net.minecraft.client.gui.screen.Screen field_230705_e_ # children
 public net.minecraft.client.gui.screen.inventory.ContainerScreen field_147003_i # guiLeft
